MDEV-349 5.5 xtradb innodb_prefix_index_liftedlimit crash with valgrind

This is XtraDB bug lp:1015109, introduced by innodb_split_buf_pool_mutex.patch

Comment the offending assertion, until the fixed XtraDB is available